# Personal-Slack-Client

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COLD_START_FIX_COMPLETE.md  CRITICAL_STARTUP_NOTES.md  CROSS_WORKSPACE_DM_FIX.md  DEEP_CLEANUP_ANALYSIS.md  DEEP_CLEANUP_SUMMARY.md  DM_DEBUG_INSTRUCTIONS.md  DM_SEARCH_FINAL_IMPLEMENTATION.md  EMOJI_CONFIG_SIMPLE.md  EMOJI_DEBUG_SUMMARY.md  EMOJI_REACTION_FIX_REPORT.md  FAVORITES_FIX_VERIFICATION.md  FEATURES_GUIDE.md  FILE_UPLOAD_STATUS.md  FIX_SUMMARY.md  FOCUS_FIX_TEST.md  GROUP_DM_FIXES.md  INITIALIZATION_BEST_PRACTICES.md  KEYBOARD_SHORTCUTS_UPDATE.md  MESSAGE_POSTING_IMPLEMENTATION_PLAN.md  PDF_ZOOM_SCROLL_FIX.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_2_PERFORMANCE_OPTIMIZATIONS.md  PHASE_3_IMPLEMENTATION_ROADMAP.md  PHASE_4_GROUP_DM_IMPLEMENTATION.md  QUICK_REFERENCE_INITIALIZATION.md  README.md  RECOVERY_SUMMARY.md  SLACK_TOKEN_GUIDE.md  TAURI_WHITE_SCREEN_ROOT_CAUSE_ANALYSIS.md  TEMP_FILE_PREVIEW_EXPANSION_PLAN.md  TOAST_NOTIFICATIONS_IMPLEMENTATION.md  URL_INPUT_FIX_SUMMARY.md  URL_OPENING_IMPLEMENTATION_PLAN.md  (+76 more)
src-tauri/: Cargo.toml  DM_USER_FIX_SUMMARY.md  TROUBLESHOOTING_USER_SEARCH.md  debug-dm-users.sh  start-server.sh  tauri.conf.json  test-dm-user-fix.sh  test-mpdm-fix.sh  test-user-fix.sh  verify_fix.md
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  channels.rs  debug.rs  emoji.rs  export.rs  files.rs  mark.rs  mod.rs  post.rs  reactions.rs  search.rs  (+3 more)
(+222 files in other folders)
